--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories (${CMAKE_SOURCE_DIR}/src)
 set (itFileModule_SRCS
     src/binfile.cpp
     src/itfile.cpp
-    src/vec.cpp)
+    src/vec.cpp
+    src/it_file.cpp)
 
 add_library (itfile SHARED ${itFileModule_SRCS})
