--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,18 @@ set (itFileModule_SRCS
     src/binfile.cpp
     src/itfile.cpp
     src/vec.cpp
+    src/mat.cpp
+    src/copy_vector.cpp
+    src/itassert.cpp
+    src/misc.cpp
+    src/converters.cpp
+    src/help_functions.cpp
+    src/matfunc.cpp
+    src/inv.cpp
+    src/schur.cpp
+    src/binary.cpp
     src/it_file.cpp)
+
+add_subdirectory (test)
 
 add_library (itfile SHARED ${itFileModule_SRCS})
